[package]
name = "cu-zenoh-bridge-bench"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Minimal two-task Zenoh bridge latency benchmark."

publish = false

default-run = "zenoh-bench-rx"

[dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-zenoh-bridge = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
serde = { workspace = true }
bincode = { workspace = true }

[[bin]]
name = "zenoh-bench-tx"
path = "src/bin/tx.rs"

[[bin]]
name = "zenoh-bench-rx"
path = "src/bin/rx.rs"
